src/objects/P7S1_AccountDashboardFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains all fields which are shown in Account Dashboard overview section</description>
    <fields>
        <fullName>P7S1_API_Field_on_Account__c</fullName>
        <label>API Field on Account</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Custom_Label_EN__c</fullName>
        <label>Custom Label EN</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Custom_Label__c</fullName>
        <label>Custom Label DE</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Group__c</fullName>
        <label>Group</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_Is_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_MA_only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Information is only shown for Users of M&amp;A Unit</description>
        <inlineHelpText>Information is only shown for Users of M&amp;A Unit</inlineHelpText>
        <label>M&amp;A only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Needs_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_Parent_ID_Field__c</fullName>
        <label>Parent ID Field on Account (only Link)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Account Dashboard Fields</label>
</CustomObject>